Sua phan code cua duy va lm login