@@ -29,19 +29,27 @@ import javax.swing.table.DefaultTableCellRenderer;
 import javax.swing.table.DefaultTableModel;
 import java.awt.BorderLayout;
 import java.awt.Color;
+import java.awt.Component;
 import java.awt.Cursor;
 import java.awt.Dimension;
-import java.awt.FlowLayout;
+import java.awt.Font;
+import java.io.BufferedWriter;
 import java.io.File;
-import java.io.FileWriter;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.sql.SQLException;
 import java.time.format.DateTimeFormatter;
+import java.util.Collections;
 import java.util.List;
+import java.util.Locale;
 
 public class UserManagementView extends JPanel {
 
     private static final int ROWS_PER_PAGE = 8;
+
+    private static final DateTimeFormatter DATE_FORMATTER =
+            DateTimeFormatter.ofPattern("dd/MM/yyyy");
 
     private final UserController userController;
 
@@ -51,12 +59,18 @@ public class UserManagementView extends JPanel {
     private final JTextField searchField;
     private final JLabel resultLabel;
     private final JLabel pageLabel;
+    private final JLabel totalUserLabel;
 
     private JButton previousButton;
     private JButton nextButton;
+    private JButton editButton;
+    private JButton deleteButton;
+    private JButton exportButton;
 
-    private List<User> allUsers = List.of();
+    private List<User> allUsers = Collections.emptyList();
+
     private int currentPage = 1;
+    private boolean loading;
 
     public UserManagementView() {
         userController = new UserController();
@@ -64,6 +78,7 @@ public class UserManagementView extends JPanel {
         searchField = new JTextField();
         resultLabel = new JLabel();
         pageLabel = new JLabel();
+        totalUserLabel = new JLabel("0 tài khoản");
 
         tableModel = new DefaultTableModel(
                 new Object[]{
@@ -79,7 +94,10 @@ public class UserManagementView extends JPanel {
                 0
         ) {
             @Override
-            public boolean isCellEditable(int row, int column) {
+            public boolean isCellEditable(
+                    int row,
+                    int column
+            ) {
                 return false;
             }
         };
@@ -97,7 +115,7 @@ public class UserManagementView extends JPanel {
 
         JPanel wrapper = new JPanel(
                 new MigLayout(
-                        "fill, insets 14",
+                        "fill, insets 16",
                         "[grow, fill]",
                         "[grow, fill]"
                 )
@@ -109,45 +127,110 @@ public class UserManagementView extends JPanel {
 
         card.setLayout(
                 new MigLayout(
-                        "fill, wrap 1, insets 18",
+                        "fill, wrap 1, insets 18 20",
                         "[grow, fill]",
-                        "[]12[]12[grow, fill]12[]"
+                        "[]14[]12[grow, fill]12[]"
                 )
         );
 
-        card.add(createTitlePanel(), "growx");
-        card.add(createToolbar(), "growx");
-        card.add(createTableScrollPane(), "grow, push");
-        card.add(createPaginationPanel(), "growx");
+        card.setMinimumSize(
+                new Dimension(650, 500)
+        );
 
-        wrapper.add(card, "grow, push");
-        add(wrapper, BorderLayout.CENTER);
+        card.add(
+                createTitlePanel(),
+                "growx"
+        );
+
+        card.add(
+                createToolbar(),
+                "growx"
+        );
+
+        card.add(
+                createTableScrollPane(),
+                "grow, push"
+        );
+
+        card.add(
+                createPaginationPanel(),
+                "growx"
+        );
+
+        wrapper.add(
+                card,
+                "grow, push"
+        );
+
+        add(
+                wrapper,
+                BorderLayout.CENTER
+        );
     }
 
     private JPanel createTitlePanel() {
         JPanel panel = new JPanel(
                 new MigLayout(
-                        "fillx, wrap 1, insets 0",
-                        "[grow]",
+                        "fillx, insets 0",
+                        "[grow, fill][]",
                         "[][]"
                 )
         );
 
         panel.setOpaque(false);
 
-        JLabel titleLabel = new JLabel("Quản lý tài khoản");
-        titleLabel.setFont(UIConstants.FONT_HEADING);
-        titleLabel.setForeground(UIConstants.TEXT_PRIMARY);
-
-        JLabel descriptionLabel = new JLabel(
-                "Quản lý danh sách tài khoản trong hệ thống"
+        JLabel titleLabel = new JLabel(
+                "Quản lý tài khoản"
         );
 
-        descriptionLabel.setFont(UIConstants.FONT_NORMAL);
-        descriptionLabel.setForeground(UIConstants.TEXT_SECONDARY);
+        titleLabel.setFont(
+                UIConstants.FONT_HEADING
+        );
 
-        panel.add(titleLabel);
-        panel.add(descriptionLabel);
+        titleLabel.setForeground(
+                UIConstants.TEXT_PRIMARY
+        );
+
+        JLabel descriptionLabel = new JLabel(
+                "Thêm, cập nhật và quản lý các tài khoản trong hệ thống"
+        );
+
+        descriptionLabel.setFont(
+                UIConstants.FONT_NORMAL
+        );
+
+        descriptionLabel.setForeground(
+                UIConstants.TEXT_SECONDARY
+        );
+
+        totalUserLabel.setFont(
+                UIConstants.FONT_MEDIUM.deriveFont(
+                        Font.BOLD
+                )
+        );
+
+        totalUserLabel.setForeground(
+                UIConstants.PRIMARY
+        );
+
+        totalUserLabel.setHorizontalAlignment(
+                SwingConstants.RIGHT
+        );
+
+        panel.add(
+                titleLabel,
+                "cell 0 0"
+        );
+
+        panel.add(
+                descriptionLabel,
+                "cell 0 1"
+        );
+
+        panel.add(
+                totalUserLabel,
+                "cell 1 0 1 2, align right"
+        );
 
         return panel;
     }
@@ -155,9 +238,9 @@ public class UserManagementView extends JPanel {
     private JPanel createToolbar() {
         JPanel toolbar = new JPanel(
                 new MigLayout(
-                        "fillx, wrap 1, insets 0",
-                        "[grow, fill]",
-                        "[]8[]"
+                        "fillx, insets 0",
+                        "[grow, fill]10[]",
+                        "[]"
                 )
         );
 
@@ -165,77 +248,107 @@ public class UserManagementView extends JPanel {
 
         searchField.putClientProperty(
                 "JTextField.placeholderText",
-                "Tìm kiếm theo tên, email, vai trò..."
+                "Tìm theo tên đăng nhập, họ tên, email, vai trò..."
         );
 
         searchField.putClientProperty(
                 "JTextField.leadingIcon",
                 FontIcon.of(
                         FontAwesomeSolid.SEARCH,
-                        15,
+                        14,
                         UIConstants.TEXT_SECONDARY
                 )
         );
 
+        searchField.putClientProperty(
+                "FlatLaf.style",
+                """
+                arc: 10;
+                margin: 7,10,7,10;
+                """
+        );
+
+        searchField.setMinimumSize(
+                new Dimension(220, 38)
+        );
+
         searchField.setPreferredSize(
-                new Dimension(300, 38)
+                new Dimension(390, 38)
         );
 
         JPanel buttonPanel = new JPanel(
-                new FlowLayout(
-                        FlowLayout.RIGHT,
-                        7,
-                        0
+                new MigLayout(
+                        "insets 0",
+                        "[][][][][]",
+                        "[]"
                 )
         );
 
         buttonPanel.setOpaque(false);
 
-        JButton refreshButton = createToolbarButton(
-                "Làm mới",
-                FontAwesomeSolid.SYNC_ALT,
-                Color.WHITE,
-                UIConstants.PRIMARY
+        JButton refreshButton =
+                createToolbarButton(
+                        "Làm mới",
+                        FontAwesomeSolid.SYNC_ALT,
+                        Color.WHITE,
+                        UIConstants.PRIMARY
+                );
+
+        JButton addButton =
+                createToolbarButton(
+                        "Thêm mới",
+                        FontAwesomeSolid.PLUS,
+                        UIConstants.PRIMARY,
+                        Color.WHITE
+                );
+
+        editButton =
+                createToolbarButton(
+                        "Cập nhật",
+                        FontAwesomeSolid.EDIT,
+                        Color.WHITE,
+                        UIConstants.PRIMARY
+                );
+
+        deleteButton =
+                createToolbarButton(
+                        "Xóa",
+                        FontAwesomeSolid.TRASH_ALT,
+                        Color.WHITE,
+                        UIConstants.DANGER
+                );
+
+        exportButton =
+                createToolbarButton(
+                        "Xuất CSV",
+                        FontAwesomeSolid.DOWNLOAD,
+                        UIConstants.SUCCESS,
+                        Color.WHITE
+                );
+
+        refreshButton.addActionListener(
+                event -> {
+                    searchField.setText("");
+                    currentPage = 1;
+                    loadUsers();
+                }
         );
 
-        JButton addButton = createToolbarButton(
-                "Thêm mới",
-                FontAwesomeSolid.PLUS,
-                UIConstants.PRIMARY,
-                Color.WHITE
+        addButton.addActionListener(
+                event -> createUser()
         );
 
-        JButton editButton = createToolbarButton(
-                "Cập nhật",
-                FontAwesomeSolid.EDIT,
-                Color.WHITE,
-                UIConstants.PRIMARY
+        editButton.addActionListener(
+                event -> updateSelectedUser()
         );
 
-        JButton deleteButton = createToolbarButton(
-                "Xóa",
-                FontAwesomeSolid.TRASH_ALT,
-                Color.WHITE,
-                UIConstants.DANGER
+        deleteButton.addActionListener(
+                event -> deleteSelectedUser()
         );
 
-        JButton exportButton = createToolbarButton(
-                "Xuất CSV",
-                FontAwesomeSolid.DOWNLOAD,
-                UIConstants.SUCCESS,
-                Color.WHITE
+        exportButton.addActionListener(
+                event -> exportCsv()
         );
-
-        refreshButton.addActionListener(event -> {
-            searchField.setText("");
-            currentPage = 1;
-            loadUsers();
-        });
-
-        addButton.addActionListener(event -> createUser());
-        editButton.addActionListener(event -> updateSelectedUser());
-        deleteButton.addActionListener(event -> deleteSelectedUser());
-        exportButton.addActionListener(event -> exportCsv());
 
         buttonPanel.add(refreshButton);
         buttonPanel.add(addButton);
@@ -243,8 +356,15 @@ public class UserManagementView extends JPanel {
         buttonPanel.add(deleteButton);
         buttonPanel.add(exportButton);
 
-        toolbar.add(searchField, "growx, height 38!");
-        toolbar.add(buttonPanel, "growx");
+        toolbar.add(
+                searchField,
+                "growx, height 38!"
+        );
+
+        toolbar.add(
+                buttonPanel,
+                "align right"
+        );
 
         return toolbar;
     }
@@ -267,7 +387,11 @@ public class UserManagementView extends JPanel {
 
         button.setBackground(background);
         button.setForeground(foreground);
-        button.setFont(UIConstants.FONT_MEDIUM);
+
+        button.setFont(
+                UIConstants.FONT_MEDIUM
+        );
+
         button.setFocusable(false);
 
         button.setCursor(
@@ -280,6 +404,8 @@ public class UserManagementView extends JPanel {
                 "FlatLaf.style",
                 """
                 arc: 10;
+                borderWidth: 1;
+                focusWidth: 0;
                 margin: 7,10,7,10;
                 """
         );
@@ -295,37 +421,54 @@ public class UserManagementView extends JPanel {
                 ListSelectionModel.SINGLE_SELECTION
         );
 
-        /*
-         * Bảng tự co theo vùng nội dung.
-         * Không làm toàn trang bị tràn sang phải.
-         */
         userTable.setAutoResizeMode(
                 JTable.AUTO_RESIZE_SUBSEQUENT_COLUMNS
+        );
+
+        userTable.setShowHorizontalLines(true);
+        userTable.setShowVerticalLines(false);
+
+        userTable.setGridColor(
+                UIConstants.BORDER
+        );
+
+        userTable.setIntercellSpacing(
+                new Dimension(0, 1)
+        );
+
+        userTable.setSelectionBackground(
+                new Color(239, 246, 255)
+        );
+
+        userTable.setSelectionForeground(
+                UIConstants.TEXT_PRIMARY
         );
 
         userTable.getTableHeader()
                 .setReorderingAllowed(false);
 
+        userTable.getTableHeader()
+                .setPreferredSize(
+                        new Dimension(0, 40)
+                );
+
+        userTable.getTableHeader()
+                .setFont(
+                        UIConstants.FONT_MEDIUM.deriveFont(
+                                Font.BOLD
+                        )
+                );
+
+        userTable.getTableHeader()
+                .setForeground(
+                        UIConstants.TEXT_PRIMARY
+                );
+
         configureColumnWidths();
         configureRenderers();
 
-        userTable.addMouseListener(
-                new java.awt.event.MouseAdapter() {
-                    @Override
-                    public void mouseClicked(
-                            java.awt.event.MouseEvent event
-                    ) {
-                        if (
-                                event.getClickCount() == 2
-                                        && userTable.getSelectedRow() >= 0
-                        ) {
-                            updateSelectedUser();
-                        }
-                    }
-                }
-        );
-
-        JScrollPane scrollPane = new JScrollPane(userTable);
+        JScrollPane scrollPane =
+                new JScrollPane(userTable);
 
         scrollPane.setBorder(
                 BorderFactory.createLineBorder(
@@ -341,51 +484,41 @@ public class UserManagementView extends JPanel {
                 JScrollPane.VERTICAL_SCROLLBAR_AS_NEEDED
         );
 
+        scrollPane.getViewport().setBackground(
+                Color.WHITE
+        );
+
         scrollPane.getVerticalScrollBar()
-                .setUnitIncrement(15);
+                .setUnitIncrement(16);
 
         scrollPane.getHorizontalScrollBar()
-                .setUnitIncrement(15);
+                .setUnitIncrement(16);
 
         scrollPane.setMinimumSize(
-                new Dimension(400, 250)
+                new Dimension(500, 280)
         );
 
         return scrollPane;
     }
 
     private void configureColumnWidths() {
-        userTable.getColumnModel()
-                .getColumn(0)
-                .setPreferredWidth(45);
+        setColumnWidth(0, 45);
+        setColumnWidth(1, 120);
+        setColumnWidth(2, 165);
+        setColumnWidth(3, 200);
+        setColumnWidth(4, 125);
+        setColumnWidth(5, 95);
+        setColumnWidth(6, 105);
+        setColumnWidth(7, 100);
+    }
 
+    private void setColumnWidth(
+            int columnIndex,
+            int preferredWidth
+    ) {
         userTable.getColumnModel()
-                .getColumn(1)
-                .setPreferredWidth(120);
-
-        userTable.getColumnModel()
-                .getColumn(2)
-                .setPreferredWidth(160);
-
-        userTable.getColumnModel()
-                .getColumn(3)
-                .setPreferredWidth(190);
-
-        userTable.getColumnModel()
-                .getColumn(4)
-                .setPreferredWidth(120);
-
-        userTable.getColumnModel()
-                .getColumn(5)
-                .setPreferredWidth(90);
-
-        userTable.getColumnModel()
-                .getColumn(6)
-                .setPreferredWidth(95);
-
-        userTable.getColumnModel()
-                .getColumn(7)
-                .setPreferredWidth(100);
+                .getColumn(columnIndex)
+                .setPreferredWidth(preferredWidth);
     }
 
     private void configureRenderers() {
@@ -396,13 +529,27 @@ public class UserManagementView extends JPanel {
                 SwingConstants.CENTER
         );
 
-        int[] centeredColumns = {0, 5, 6, 7};
+        int[] centeredColumns = {
+                0, 5, 6, 7
+        };
 
         for (int column : centeredColumns) {
             userTable.getColumnModel()
                     .getColumn(column)
                     .setCellRenderer(centerRenderer);
         }
+
+        userTable.getColumnModel()
+                .getColumn(5)
+                .setCellRenderer(
+                        new RoleCellRenderer()
+                );
+
+        userTable.getColumnModel()
+                .getColumn(6)
+                .setCellRenderer(
+                        new StatusCellRenderer()
+                );
     }
 
     private JPanel createPaginationPanel() {
@@ -416,41 +563,87 @@ public class UserManagementView extends JPanel {
 
         panel.setOpaque(false);
 
-        resultLabel.setFont(UIConstants.FONT_NORMAL);
-        resultLabel.setForeground(UIConstants.TEXT_SECONDARY);
+        resultLabel.setFont(
+                UIConstants.FONT_NORMAL
+        );
 
-        previousButton = createPaginationButton("‹");
-        nextButton = createPaginationButton("›");
+        resultLabel.setForeground(
+                UIConstants.TEXT_SECONDARY
+        );
 
-        previousButton.addActionListener(event -> {
-            if (currentPage > 1) {
-                currentPage--;
-                displayCurrentPage();
-            }
-        });
+        previousButton =
+                createPaginationButton("‹");
 
-        nextButton.addActionListener(event -> {
-            if (currentPage < getTotalPages()) {
-                currentPage++;
-                displayCurrentPage();
-            }
-        });
+        nextButton =
+                createPaginationButton("›");
 
-        pageLabel.setFont(UIConstants.FONT_MEDIUM);
-        pageLabel.setForeground(UIConstants.TEXT_PRIMARY);
+        previousButton.setToolTipText(
+                "Trang trước"
+        );
 
-        panel.add(resultLabel, "growx");
+        nextButton.setToolTipText(
+                "Trang sau"
+        );
+
+        previousButton.addActionListener(
+                event -> {
+                    if (currentPage > 1) {
+                        currentPage--;
+                        displayCurrentPage();
+                    }
+                }
+        );
+
+        nextButton.addActionListener(
+                event -> {
+                    if (
+                            currentPage
+                                    < getTotalPages()
+                    ) {
+                        currentPage++;
+                        displayCurrentPage();
+                    }
+                }
+        );
+
+        pageLabel.setFont(
+                UIConstants.FONT_MEDIUM.deriveFont(
+                        Font.BOLD
+                )
+        );
+
+        pageLabel.setForeground(
+                UIConstants.TEXT_PRIMARY
+        );
+
+        pageLabel.setHorizontalAlignment(
+                SwingConstants.CENTER
+        );
+
+        panel.add(
+                resultLabel,
+                "growx"
+        );
+
         panel.add(previousButton);
-        panel.add(pageLabel);
+        panel.add(pageLabel, "width 58!");
         panel.add(nextButton);
 
         return panel;
     }
 
-    private JButton createPaginationButton(String text) {
+    private JButton createPaginationButton(
+            String text
+    ) {
         JButton button = new JButton(text);
 
         button.setFocusable(false);
+
+        button.setCursor(
+                Cursor.getPredefinedCursor(
+                        Cursor.HAND_CURSOR
+                )
+        );
 
         button.setPreferredSize(
                 new Dimension(36, 32)
@@ -460,6 +653,7 @@ public class UserManagementView extends JPanel {
                 "FlatLaf.style",
                 """
                 arc: 9;
+                focusWidth: 0;
                 margin: 5,8,5,8;
                 """
         );
@@ -493,6 +687,33 @@ public class UserManagementView extends JPanel {
                             }
                         }
                 );
+
+        userTable.getSelectionModel()
+                .addListSelectionListener(
+                        event -> {
+                            if (!event.getValueIsAdjusting()) {
+                                updateActionButtonState();
+                            }
+                        }
+                );
+
+        userTable.addMouseListener(
+                new java.awt.event.MouseAdapter() {
+                    @Override
+                    public void mouseClicked(
+                            java.awt.event.MouseEvent event
+                    ) {
+                        if (
+                                event.getClickCount() == 2
+                                        && userTable.getSelectedRow() >= 0
+                        ) {
+                            updateSelectedUser();
+                        }
+                    }
+                }
+        );
+
+        updateActionButtonState();
     }
 
     private void applySearch() {
@@ -501,8 +722,19 @@ public class UserManagementView extends JPanel {
     }
 
     public void loadUsers() {
+        if (loading) {
+            return;
+        }
+
+        loading = true;
+
         try {
-            allUsers = userController.getAllUsers();
+            List<User> users =
+                    userController.getAllUsers();
+
+            allUsers = users == null
+                    ? Collections.emptyList()
+                    : users;
 
             int totalPages = getTotalPages();
 
@@ -516,20 +748,19 @@ public class UserManagementView extends JPanel {
 
             displayCurrentPage();
 
-            System.out.println(
-                    "Đã tải "
-                            + allUsers.size()
-                            + " tài khoản."
-            );
-
         } catch (SQLException exception) {
-            allUsers = List.of();
+            allUsers = Collections.emptyList();
             tableModel.setRowCount(0);
+
+            updateSummaryState();
 
             showError(
                     "Không thể tải danh sách tài khoản.",
                     exception
             );
+
+        } finally {
+            loading = false;
         }
     }
 
@@ -537,7 +768,8 @@ public class UserManagementView extends JPanel {
         List<User> filteredUsers =
                 getFilteredUsers();
 
-        int totalRows = filteredUsers.size();
+        int totalRows =
+                filteredUsers.size();
 
         int totalPages = Math.max(
                 1,
@@ -566,11 +798,6 @@ public class UserManagementView extends JPanel {
 
         tableModel.setRowCount(0);
 
-        DateTimeFormatter formatter =
-                DateTimeFormatter.ofPattern(
-                        "dd/MM/yyyy"
-                );
-
         if (startIndex < endIndex) {
             for (
                     User user :
@@ -579,19 +806,23 @@ public class UserManagementView extends JPanel {
                             endIndex
                     )
             ) {
+                if (user == null) {
+                    continue;
+                }
+
                 tableModel.addRow(
                         new Object[]{
                                 user.getUserId(),
-                                user.getUsername(),
-                                user.getFullName(),
-                                user.getEmail(),
-                                user.getPhone(),
+                                safeText(user.getUsername()),
+                                safeText(user.getFullName()),
+                                safeText(user.getEmail()),
+                                safeText(user.getPhone()),
                                 user.getRole(),
                                 user.getStatus(),
                                 user.getCreatedAt() == null
                                         ? ""
                                         : user.getCreatedAt()
-                                        .format(formatter)
+                                        .format(DATE_FORMATTER)
                         }
                 );
             }
@@ -599,16 +830,19 @@ public class UserManagementView extends JPanel {
 
         if (totalRows == 0) {
             resultLabel.setText(
-                    "Không tìm thấy tài khoản"
+                    searchField.getText().isBlank()
+                            ? "Chưa có tài khoản trong hệ thống"
+                            : "Không tìm thấy tài khoản phù hợp"
             );
         } else {
             resultLabel.setText(
                     "Hiển thị "
                             + (startIndex + 1)
-                            + " đến "
+                            + "–"
                             + endIndex
-                            + " trong tổng số "
+                            + " trong "
                             + totalRows
+                            + " tài khoản"
             );
         }
 
@@ -626,8 +860,36 @@ public class UserManagementView extends JPanel {
                 currentPage < totalPages
         );
 
+        userTable.clearSelection();
+
+        updateSummaryState();
+        updateActionButtonState();
+
         userTable.revalidate();
         userTable.repaint();
+    }
+
+    private void updateSummaryState() {
+        int totalUsers =
+                allUsers == null
+                        ? 0
+                        : allUsers.size();
+
+        totalUserLabel.setText(
+                totalUsers + " tài khoản"
+        );
+
+        exportButton.setEnabled(
+                totalUsers > 0
+        );
+    }
+
+    private void updateActionButtonState() {
+        boolean hasSelection =
+                userTable.getSelectedRow() >= 0;
+
+        editButton.setEnabled(hasSelection);
+        deleteButton.setEnabled(hasSelection);
     }
 
     private int getTotalPages() {
@@ -641,21 +903,43 @@ public class UserManagementView extends JPanel {
     }
 
     private List<User> getFilteredUsers() {
+        if (
+                allUsers == null
+                        || allUsers.isEmpty()
+        ) {
+            return Collections.emptyList();
+        }
+
         String keyword = searchField
                 .getText()
                 .trim()
-                .toLowerCase();
+                .toLowerCase(
+                        Locale.ROOT
+                );
 
         if (keyword.isBlank()) {
             return allUsers;
         }
 
         return allUsers.stream()
+                .filter(user -> user != null)
                 .filter(user ->
-                        contains(user.getUsername(), keyword)
-                                || contains(user.getFullName(), keyword)
-                                || contains(user.getEmail(), keyword)
-                                || contains(user.getPhone(), keyword)
+                        contains(
+                                user.getUsername(),
+                                keyword
+                        )
+                                || contains(
+                                user.getFullName(),
+                                keyword
+                        )
+                                || contains(
+                                user.getEmail(),
+                                keyword
+                        )
+                                || contains(
+                                user.getPhone(),
+                                keyword
+                        )
                                 || contains(
                                 user.getRole() == null
                                         ? null
@@ -677,8 +961,9 @@ public class UserManagementView extends JPanel {
             String keyword
     ) {
         return value != null
-                && value.toLowerCase()
-                .contains(keyword);
+                && value.toLowerCase(
+                Locale.ROOT
+        ).contains(keyword);
     }
 
     private void createUser() {
@@ -702,18 +987,27 @@ public class UserManagementView extends JPanel {
                             )
                     );
 
-            if (successful) {
+            if (!successful) {
                 JOptionPane.showMessageDialog(
                         this,
-                        "Thêm tài khoản thành công.",
-                        "Thành công",
-                        JOptionPane.INFORMATION_MESSAGE
+                        "Không thể thêm tài khoản.",
+                        "Thông báo",
+                        JOptionPane.WARNING_MESSAGE
                 );
 
-                searchField.setText("");
-                currentPage = 1;
-                loadUsers();
+                return;
             }
+
+            JOptionPane.showMessageDialog(
+                    this,
+                    "Thêm tài khoản thành công.",
+                    "Thành công",
+                    JOptionPane.INFORMATION_MESSAGE
+            );
+
+            searchField.setText("");
+            currentPage = 1;
+            loadUsers();
 
         } catch (Exception exception) {
             showError(
@@ -724,7 +1018,8 @@ public class UserManagementView extends JPanel {
     }
 
     private void updateSelectedUser() {
-        User selectedUser = getSelectedUser();
+        User selectedUser =
+                getSelectedUser();
 
         if (selectedUser == null) {
             JOptionPane.showMessageDialog(
@@ -783,16 +1078,25 @@ public class UserManagementView extends JPanel {
                             selectedUser
                     );
 
-            if (successful) {
+            if (!successful) {
                 JOptionPane.showMessageDialog(
                         this,
-                        "Cập nhật tài khoản thành công.",
-                        "Thành công",
-                        JOptionPane.INFORMATION_MESSAGE
+                        "Không thể cập nhật tài khoản.",
+                        "Thông báo",
+                        JOptionPane.WARNING_MESSAGE
                 );
 
-                loadUsers();
+                return;
             }
+
+            JOptionPane.showMessageDialog(
+                    this,
+                    "Cập nhật tài khoản thành công.",
+                    "Thành công",
+                    JOptionPane.INFORMATION_MESSAGE
+            );
+
+            loadUsers();
 
         } catch (Exception exception) {
             showError(
@@ -803,7 +1107,8 @@ public class UserManagementView extends JPanel {
     }
 
     private void deleteSelectedUser() {
-        User selectedUser = getSelectedUser();
+        User selectedUser =
+                getSelectedUser();
 
         if (selectedUser == null) {
             JOptionPane.showMessageDialog(
@@ -816,9 +1121,11 @@ public class UserManagementView extends JPanel {
             return;
         }
 
-        if ("admin".equalsIgnoreCase(
-                selectedUser.getUsername()
-        )) {
+        if (
+                "admin".equalsIgnoreCase(
+                        selectedUser.getUsername()
+                )
+        ) {
             JOptionPane.showMessageDialog(
                     this,
                     "Không thể xóa tài khoản quản trị chính.",
@@ -829,17 +1136,23 @@ public class UserManagementView extends JPanel {
             return;
         }
 
-        int answer = JOptionPane.showConfirmDialog(
-                this,
-                "Bạn có chắc muốn xóa tài khoản \""
-                        + selectedUser.getUsername()
-                        + "\"?",
-                "Xác nhận xóa",
-                JOptionPane.YES_NO_OPTION,
-                JOptionPane.WARNING_MESSAGE
-        );
+        int answer =
+                JOptionPane.showConfirmDialog(
+                        this,
+                        "Bạn có chắc muốn xóa tài khoản \""
+                                + safeText(
+                                selectedUser.getUsername()
+                        )
+                                + "\"?",
+                        "Xác nhận xóa",
+                        JOptionPane.YES_NO_OPTION,
+                        JOptionPane.WARNING_MESSAGE
+                );
 
-        if (answer != JOptionPane.YES_OPTION) {
+        if (
+                answer
+                        != JOptionPane.YES_OPTION
+        ) {
             return;
         }
 
@@ -849,16 +1162,25 @@ public class UserManagementView extends JPanel {
                             selectedUser.getUserId()
                     );
 
-            if (successful) {
+            if (!successful) {
                 JOptionPane.showMessageDialog(
                         this,
-                        "Xóa tài khoản thành công.",
-                        "Thành công",
-                        JOptionPane.INFORMATION_MESSAGE
+                        "Không thể xóa tài khoản.",
+                        "Thông báo",
+                        JOptionPane.WARNING_MESSAGE
                 );
 
-                loadUsers();
+                return;
             }
+
+            JOptionPane.showMessageDialog(
+                    this,
+                    "Xóa tài khoản thành công.",
+                    "Thành công",
+                    JOptionPane.INFORMATION_MESSAGE
+            );
+
+            loadUsers();
 
         } catch (Exception exception) {
             showError(
@@ -890,27 +1212,36 @@ public class UserManagementView extends JPanel {
 
         int userId;
 
-        if (idValue instanceof Integer integerValue) {
-            userId = integerValue;
+        if (
+                idValue
+                        instanceof Number number
+        ) {
+            userId = number.intValue();
+
         } else {
             try {
                 userId = Integer.parseInt(
                         String.valueOf(idValue)
                 );
+
             } catch (NumberFormatException exception) {
                 return null;
             }
         }
 
         return allUsers.stream()
+                .filter(user -> user != null)
                 .filter(user ->
-                        user.getUserId() == userId
+                        user.getUserId()
+                                == userId
                 )
                 .findFirst()
                 .orElse(null);
     }
 
-    private int getRoleId(Role role) {
+    private int getRoleId(
+            Role role
+    ) {
         if (role == null) {
             return 3;
         }
@@ -923,6 +1254,20 @@ public class UserManagementView extends JPanel {
     }
 
     private void exportCsv() {
+        List<User> usersToExport =
+                getFilteredUsers();
+
+        if (usersToExport.isEmpty()) {
+            JOptionPane.showMessageDialog(
+                    this,
+                    "Không có dữ liệu để xuất.",
+                    "Thông báo",
+                    JOptionPane.WARNING_MESSAGE
+            );
+
+            return;
+        }
+
         JFileChooser fileChooser =
                 new JFileChooser();
 
@@ -938,7 +1283,7 @@ public class UserManagementView extends JPanel {
 
         fileChooser.setFileFilter(
                 new FileNameExtensionFilter(
-                        "Tệp CSV",
+                        "Tệp CSV (*.csv)",
                         "csv"
                 )
         );
@@ -951,36 +1296,42 @@ public class UserManagementView extends JPanel {
         }
 
         File file =
-                fileChooser.getSelectedFile();
-
-        if (
-                !file.getName()
-                        .toLowerCase()
-                        .endsWith(".csv")
-        ) {
-            file = new File(
-                    file.getAbsolutePath()
-                            + ".csv"
-            );
-        }
-
-        DateTimeFormatter formatter =
-                DateTimeFormatter.ofPattern(
-                        "dd/MM/yyyy"
+                ensureCsvExtension(
+                        fileChooser.getSelectedFile()
                 );
 
-        try (
-                FileWriter writer =
-                        new FileWriter(file)
+        if (
+                file.exists()
+                        && !confirmOverwrite(file)
         ) {
+            return;
+        }
+
+        try (
+                BufferedWriter writer =
+                        Files.newBufferedWriter(
+                                file.toPath(),
+                                StandardCharsets.UTF_8
+                        )
+        ) {
+            /*
+             * BOM giúp Microsoft Excel nhận đúng UTF-8.
+             */
+            writer.write('\uFEFF');
+
             writer.write(
-                    "\uFEFF"
-                            + "ID,Tên đăng nhập,Họ và tên,"
+                    "ID,Tên đăng nhập,Họ và tên,"
                             + "Email,Số điện thoại,Vai trò,"
-                            + "Trạng thái,Ngày tạo\n"
+                            + "Trạng thái,Ngày tạo"
             );
 
-            for (User user : allUsers) {
+            writer.newLine();
+
+            for (User user : usersToExport) {
+                if (user == null) {
+                    continue;
+                }
+
                 writer.write(
                         user.getUserId()
                                 + ","
@@ -1008,17 +1359,20 @@ public class UserManagementView extends JPanel {
                                 user.getCreatedAt() == null
                                         ? ""
                                         : user.getCreatedAt()
-                                        .format(formatter)
+                                        .format(DATE_FORMATTER)
                         )
-                                + "\n"
                 );
+
+                writer.newLine();
             }
 
             JOptionPane.showMessageDialog(
                     this,
-                    "Xuất dữ liệu thành công:\n"
+                    "Đã xuất "
+                            + usersToExport.size()
+                            + " tài khoản tới:\n"
                             + file.getAbsolutePath(),
-                    "Thành công",
+                    "Xuất dữ liệu thành công",
                     JOptionPane.INFORMATION_MESSAGE
             );
 
@@ -1030,7 +1384,45 @@ public class UserManagementView extends JPanel {
         }
     }
 
-    private String csv(String value) {
+    private File ensureCsvExtension(
+            File file
+    ) {
+        if (
+                file.getName()
+                        .toLowerCase(Locale.ROOT)
+                        .endsWith(".csv")
+        ) {
+            return file;
+        }
+
+        return new File(
+                file.getAbsolutePath()
+                        + ".csv"
+        );
+    }
+
+    private boolean confirmOverwrite(
+            File file
+    ) {
+        int answer =
+                JOptionPane.showConfirmDialog(
+                        this,
+                        "Tệp \""
+                                + file.getName()
+                                + "\" đã tồn tại.\n"
+                                + "Bạn có muốn ghi đè không?",
+                        "Xác nhận ghi đè",
+                        JOptionPane.YES_NO_OPTION,
+                        JOptionPane.WARNING_MESSAGE
+                );
+
+        return answer
+                == JOptionPane.YES_OPTION;
+    }
+
+    private String csv(
+            String value
+    ) {
         if (value == null) {
             return "\"\"";
         }
@@ -1043,17 +1435,180 @@ public class UserManagementView extends JPanel {
                 + "\"";
     }
 
+    private String safeText(
+            String value
+    ) {
+        return value == null
+                ? ""
+                : value.trim();
+    }
+
     private void showError(
             String message,
             Exception exception
     ) {
+        String detail =
+                exception == null
+                        || exception.getMessage() == null
+                        || exception.getMessage().isBlank()
+                        ? "Không xác định"
+                        : exception.getMessage();
+
         JOptionPane.showMessageDialog(
                 this,
                 message
                         + "\nChi tiết: "
-                        + exception.getMessage(),
+                        + detail,
                 "Lỗi",
                 JOptionPane.ERROR_MESSAGE
         );
+    }
+
+    private static class RoleCellRenderer
+            extends DefaultTableCellRenderer {
+
+        public RoleCellRenderer() {
+            setHorizontalAlignment(
+                    SwingConstants.CENTER
+            );
+        }
+
+        @Override
+        public Component getTableCellRendererComponent(
+                JTable table,
+                Object value,
+                boolean isSelected,
+                boolean hasFocus,
+                int row,
+                int column
+        ) {
+            Component component =
+                    super.getTableCellRendererComponent(
+                            table,
+                            getRoleText(value),
+                            isSelected,
+                            hasFocus,
+                            row,
+                            column
+                    );
+
+            if (!isSelected) {
+                setForeground(
+                        getRoleColor(value)
+                );
+
+                setBackground(Color.WHITE);
+            }
+
+            setFont(
+                    UIConstants.FONT_SMALL.deriveFont(
+                            Font.BOLD
+                    )
+            );
+
+            return component;
+        }
+
+        private static String getRoleText(
+                Object value
+        ) {
+            if (!(value instanceof Role role)) {
+                return "";
+            }
+
+            return switch (role) {
+                case ADMIN -> "Quản trị";
+                case TEACHER -> "Giảng viên";
+                case STUDENT -> "Học viên";
+            };
+        }
+
+        private static Color getRoleColor(
+                Object value
+        ) {
+            if (!(value instanceof Role role)) {
+                return UIConstants.TEXT_SECONDARY;
+            }
+
+            return switch (role) {
+                case ADMIN -> UIConstants.DANGER;
+                case TEACHER -> UIConstants.PURPLE;
+                case STUDENT -> UIConstants.PRIMARY;
+            };
+        }
+    }
+
+    private static class StatusCellRenderer
+            extends DefaultTableCellRenderer {
+
+        public StatusCellRenderer() {
+            setHorizontalAlignment(
+                    SwingConstants.CENTER
+            );
+        }
+
+        @Override
+        public Component getTableCellRendererComponent(
+                JTable table,
+                Object value,
+                boolean isSelected,
+                boolean hasFocus,
+                int row,
+                int column
+        ) {
+            Component component =
+                    super.getTableCellRendererComponent(
+                            table,
+                            getStatusText(value),
+                            isSelected,
+                            hasFocus,
+                            row,
+                            column
+                    );
+
+            if (!isSelected) {
+                setForeground(
+                        getStatusColor(value)
+                );
+
+                setBackground(Color.WHITE);
+            }
+
+            setFont(
+                    UIConstants.FONT_SMALL.deriveFont(
+                            Font.BOLD
+                    )
+            );
+
+            return component;
+        }
+
+        private static String getStatusText(
+                Object value
+        ) {
+            if (!(value instanceof AccountStatus status)) {
+                return "";
+            }
+
+            return switch (status) {
+                case ACTIVE -> "🟢 Hoạt động";
+                case LOCKED -> "🔒 Đã khóa";
+                case INACTIVE -> "⚪ Không hoạt động";
+            };
+        }
+
+        private static Color getStatusColor(
+                Object value
+        ) {
+            if (!(value instanceof AccountStatus status)) {
+                return UIConstants.TEXT_SECONDARY;
+            }
+
+            return switch (status) {
+                case ACTIVE -> UIConstants.SUCCESS;
+                case LOCKED -> UIConstants.DANGER;
+                case INACTIVE -> UIConstants.WARNING;
+            };
+        }
     }
 }
